--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.5.0",
     "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "maath": "^0.10.8",
     "motion": "^12.34.0",
     "react": "^19.2.0",
