--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "https://randomPlayerHere.github.io/Personal-Website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -16,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
+    "gh-pages": "^6.3.0",
     "maath": "^0.10.8",
     "motion": "^12.34.0",
     "react": "^19.2.0",
